test: Realização de testes unitários na CategoriaService